09-Введение_Kubernetes/application/manifests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-demo
  labels:
    app: hello-demo
spec:
  containers:
  - name: hello-demo
    image: pg_kub1_app:v1
    ports:
      - containerPort: 80
