09-Введение_Kubernetes/application/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
        - path: /myapp($|/)(.*)
          pathType: Prefix  
          backend:
            service:
                name: hello-service
                port: 
                    number: 9000
